fixing course content alignment

--- a/static/sass/_dashboard.scss
+++ b/static/sass/_dashboard.scss
@@ -8,6 +8,12 @@ section.container.dashboard
  	margin-bottom: 1.6em;
 }
 
+#course-content
+{
+  margin:0;
+  max-width: 855px;
+}
+
 .course-content {
     background: #fff;
     border: 1px solid #ccc;
